chore: move music to public assets folder

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,18 +1,1 @@
-src/music/ filter=lfs diff=lfs merge=lfs -text
-src/music/leavv[[:space:]]-[[:space:]]Lighthouse.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/massobeats[[:space:]]-[[:space:]]honey[[:space:]]jam.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Biscuit[[:space:]]-[[:space:]]Lukrembo.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/In[[:space:]]Dreamland[[:space:]]by[[:space:]]Chillpeach.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Lukrembo[[:space:]]-[[:space:]]Onion.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Chocolate[[:space:]]-[[:space:]]Lukrembo.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Lukrembo[[:space:]]-[[:space:]]Storybook.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/leavv[[:space:]]-[[:space:]]Voyage.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Lukrembo[[:space:]]-[[:space:]]Pancake.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Lukrembo[[:space:]]-[[:space:]]Wine.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Lukrembo[[:space:]]-[[:space:]]Affogato.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Lukrembo[[:space:]]-[[:space:]]Bake[[:space:]]A[[:space:]]Pie.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Lukrembo[[:space:]]-[[:space:]]Butter.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Lukrembo[[:space:]]-[[:space:]]Night.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Bread[[:space:]]-[[:space:]]Lukrembo.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Cap[[:space:]]Kendricks[[:space:]]-[[:space:]]Vino.mp3 filter=lfs diff=lfs merge=lfs -text
-src/music/Lukrembo[[:space:]]-[[:space:]]Home.mp3 filter=lfs diff=lfs merge=lfs -text
+public/assets/music/** filter=lfs diff=lfs merge=lfs -text
